<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img_photo_register"
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="@dimen/dimen_120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_police_splash" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_nombre_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/nombre" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_telefono_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textCapCharacters"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:maxLength="12"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/descripcion" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_et_mail_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:inputType="textCapCharacters"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/commen" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_crearpoli_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@drawable/my_btn_background_ripple"
        android:textColor="@color/white"
        android:text="@string/crearpoli" />


</LinearLayout>